# AutonomousLIMO

./: .gitignore  README.md  precise_bt.xml  startup_finals.sh
src/av_technology/: package.xml  setup.cfg  setup.py
src/av_technology/av_technology/: autonomous.py  finals.backup.py  finals.py  midterms.py  obstacle_detection.py  qrcode_detector.py  traffic_light_detector.py
