<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>av_technology</name>
  <version>0.0.1</version>
  <description>This package contains the nodes for the finals exams of the AV Technology course from Korea University.</description>
  <maintainer email="karakaya.sinan@proton.me">Sinan KARAKAYA</maintainer>
  <license>MIT</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>wego_msgs</exec_depend>

  <exec_depend>sensor_msgs_py</exec_depend>
  <!-- <exec_depend>visualization_msgs</exec_depend> -->
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>robot_navigator</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>nav2_simple_commander</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
